<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OTA Updater</string>

    <string name="about_developed_by">Developed By:</string>
    <string name="about_developer">Jordan Craig (JieeHD)</string>
    <string name="about_Thanks_to">Thanks To:</string>
    <string name="about_thanks">HomerSp</string>
    <string name="about_application_version">Application Version</string>
    <string name="about_blank"></string>
    
    <string name="app_update_url" translatable="false">http://sensation-devs.org/romupdater2/pages/notthereyet.php</string>
    
    <string name="notif_text_rom">OTA ROM Update Available</string>
    <string name="notif_text_app">OTA App Update Available</string>
    <string name="notif_source">OTA Updater</string>
    
    <string name="alert_nodata_title">No Data Connection!</string>
    <string name="alert_nodata_message">You have no data connection\nPlease turn on Wi-Fi or Mobile Data in order to check for and download OTA updates.</string>
    <string name="alert_nowifi_title">No Wi-Fi Connection!</string>
    <string name="alert_nowifi_message">You are on a mobile connection\nThis app uses data heavily to download ROM updates.\nIt is recommended to turn on Wi-Fi to avoid overage charges.</string>
    <string name="alert_wifi_settings">Wi-Fi Settings</string>
    <string name="alert_ignore">Ignore</string>
    <string name="alert_exit">Exit</string>
    <string name="alert_options_title">Options</string>
    <string name="alert_rename_title">Rename file</string>
    <string name="alert_rename_message">Enter new file name</string>
    <string name="alert_ok">OK</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_rename">Rename</string>
    <string name="alert_install_title">Install ZIP</string>
    <string name="alert_install">Install</string>
    <string name="alert_install_message">Installing the file will reboot into recovery to flash the ZIP file. After installation, the system will automatically reboot.</string>
    <string name="alert_update_title">ROM update available!</string>
    <string name="alert_download">Download</string>
    <string name="alert_downloading">Downloading&#8230;</string>
    <string name="alert_unsupported_title">Unsupported ROM</string>
    <string name="alert_unsupported_message">The ROM developer has not enabled support for the OTA Updater! Please ask them (kindly) to add support before using this app!\n\n(otaupdater.otaid value empty or missing)</string>
    <string name="alert_update_to">This update will update your ROM (%1$s) to version %2$s</string>
    <string name="alert_prune_title">Delete files older than</string>
    
    <string name="menu_view">View Downloaded ROMs</string>
    <string name="menu_about">About</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_prune">Delete old Files</string>
    
    <string name="toast_rename">File renamed succesfully</string>
    <string name="toast_rename_error">There was a problem while renaming the selected file</string>
    <string name="toast_delete">File deleted succesfully</string>
    <string name="toast_delete_error">There was a problem while deleting the selected file</string>
    <string name="toast_prune">Old file(s) deleted successfully</string>
    <string name="toast_prune_error">There was a problem deleting one or more old files</string>
    <string name="toast_no_updates">There are no updates at this time</string>
    <string name="toast_fetch_error">There was an error fetching OTA information</string>
    <string name="toast_download_interrupted">The download was interrupted!</string>
    <string name="toast_download_md5_mismatch">MD5 error - downloaded file invalid!</string>
    <string name="toast_download_error">There was an error with the download!</string>
    <string name="toast_checking">Checking for updates, please be patient.</string>
    
    <string name="about_title">About</string>
    <string name="about_ota_title">OTA Updater</string>
    <string name="about_ota_summary" translatable="false">http://otaupdatecenter.pro</string>
    <string name="about_version_title">Version</string>
    <string name="about_version_unknown">Unkown Version (error in package manager)</string>
    
    <string name="main_device_info">Device Information</string>
    <string name="main_device">Device</string>
    <string name="main_rom">ROM</string>
    <string name="main_version">ROM Version</string>
    <string name="main_otaid">OTA Updater ID</string>
    <string name="main_updates">Updates</string>
    <string name="main_avail_updates">Available Updates</string>
    <string name="main_updates_none">No updates available</string>
    <string name="main_updates_error">Error fetching update info: %1$s</string>
    <string name="main_updates_new">"New updates: %1$s (version %2$s)</string>
    <string name="main_build_fingerprint">Build-fingerprint</string>
    <string name="main_download">Download</string>

    <string name="ada_update_notify">Show update notifications</string>
    <string name="ada_update_displaynew">Display a notification when new updates are avialable</string>
    <string name="ada_update_cleanup">Delete old files automatically</string>
    <string name="ada_remove_old">Delete ROMs that are over a month old</string>
    <string name="ada_version">Version 1.0.0</string>
    <string name="ada_maintained">Maintained By: BlueHarford</string>

</resources>
