<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="8">

    <TextView
        android:id="@+id/textView1"
        android:layout_column="2"
        android:layout_gravity="bottom"
        android:layout_row="0"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:layout_gravity="left"
        android:layout_row="3"
        android:text="@string/about_developed_by"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="left"
        android:layout_row="4"
        android:text="@string/about_developer"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView4"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="left"
        android:layout_row="6"
        android:text="@string/about_Thanks_to"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="7"
        android:text="@string/about_thanks"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView8"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="left"
        android:layout_row="11"
        android:text="@string/about_application_version"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvAbout"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="12"
        android:text="@string/about_blank"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Space
        android:layout_width="1dp"
        android:layout_height="35dp"
        android:layout_column="0"
        android:layout_row="0" />

    <Space
        android:layout_width="21dp"
        android:layout_height="1dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <Space
        android:layout_width="68dp"
        android:layout_height="1dp"
        android:layout_column="1"
        android:layout_row="0" />

    <Space
        android:layout_width="144dp"
        android:layout_height="1dp"
        android:layout_column="2"
        android:layout_row="0" />

    <LinearLayout
        android:id="@+id/horizontalLine"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_gravity="right"
        android:layout_row="1"
        android:background="#656565">
    </LinearLayout>

    <Space
        android:layout_width="1dp"
        android:layout_height="15dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2" />

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="5" />

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="10" />

    <Space
        android:layout_width="1dp"
        android:layout_height="257dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="12" />

</GridLayout>
