<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" style="@style/info_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvDeviceHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_device"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_blank" />

    <LinearLayout
        android:id="@+id/horizontalLine"
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:layout_gravity="center|left"
        android:background="#656565">

    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_blank"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_rom"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvROM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_blank" />

    <LinearLayout
        android:id="@+id/horizontalLine1"
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:layout_gravity="center|left"
        android:background="#656565">

    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_blank"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_version"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvVer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_blank" />

    <LinearLayout
        android:id="@+id/horizontalLine2"
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:layout_gravity="center|left"
        android:background="#656565">

    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_blank"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_build_fingerprint"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvBuild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_blank" />

    <LinearLayout
        android:id="@+id/horizontalLine3"
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:layout_gravity="center|left"
        android:background="#656565"
        android:gravity="left">

    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvNewVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_blank" />

    <TextView
        android:id="@+id/tvUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/toast_checking" />

    <TextView
        android:id="@+id/tvUpdate_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_blank" />

    <TextView
        android:id="@+id/tvProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_blank" />

    <Button
        android:id="@+id/btnDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_download" />

</LinearLayout>
