<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="7">

    <TextView
        android:id="@+id/textView1"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="bottom"
        android:layout_row="0"
        android:layout_rowSpan="2"
        android:text="@string/ada_update_notify"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_column="4"
        android:layout_columnSpan="3"
        android:layout_gravity="right"
        android:layout_row="1"
        android:layout_rowSpan="2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="2"
        android:text="@string/ada_update_displaynew"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView3"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="left"
        android:layout_row="6"
        android:text="@string/ada_update_cleanup"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_column="6"
        android:layout_gravity="bottom|right"
        android:layout_row="6"
        android:layout_rowSpan="2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="left"
        android:layout_row="7"
        android:text="@string/ada_remove_old"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView5"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="left"
        android:layout_row="10"
        android:text="@string/menu_about"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Space
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="11" />

    <TextView
        android:id="@+id/tvAppVer"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="left"
        android:layout_row="11"
        android:text="@string/ada_version"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Space
        android:layout_column="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="11" />

    <TextView
        android:id="@+id/textView6"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="left"
        android:layout_row="12"
        android:text="@string/ada_maintained"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Space
        android:layout_width="21dp"
        android:layout_height="1dp"
        android:layout_column="0"
        android:layout_row="0" />

    <Space
        android:layout_width="37dp"
        android:layout_height="1dp"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <Space
        android:layout_width="209dp"
        android:layout_height="1dp"
        android:layout_column="2"
        android:layout_row="0" />

    <Space
        android:layout_width="1dp"
        android:layout_height="21dp"
        android:layout_column="0"
        android:layout_row="0" />

    <Space
        android:layout_width="1dp"
        android:layout_height="15dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1" />

    <LinearLayout
        android:id="@+id/horizontalLine"
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:layout_column="0"
        android:layout_columnSpan="7"
        android:layout_gravity="right"
        android:layout_row="4"
        android:layout_rowSpan="2"
        android:background="#656565">
    </LinearLayout>

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:layout_column="0"
        android:layout_row="8" />

    <LinearLayout
        android:id="@+id/horizontalLine"
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:layout_column="0"
        android:layout_columnSpan="7"
        android:layout_gravity="center_horizontal"
        android:layout_row="9"
        android:background="#656565">
    </LinearLayout>

    <Space
        android:layout_width="1dp"
        android:layout_height="23dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="9" />

    <Space
        android:layout_width="1dp"
        android:layout_height="281dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="12" />

    <Space
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:layout_column="0"
        android:layout_row="5" />

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:layout_column="0"
        android:layout_row="3" />

</GridLayout>
